Email in progress

--- a/views/mi-canton/ventas.hbs
+++ b/views/mi-canton/ventas.hbs
@@ -11,12 +11,11 @@
       <button>Inicio</button>
     </a>
 
-    <h1>VENTAS</h1>
+    <h1>VENDE TU PROPIEDAD</h1>
       <br>
         <h2>INFORMACIÓN DEL VENDEDOR</h2>
 
-
-    <form onsubmit="sendData" action="/ventas" method="post">
+    <form onsubmit="sendData" action="/ventas" method="post" id="#myForm">
       <div>   
         <label> Nombre
           <input name="nombreUsuario">
