--- a/views/mi-canton/inicio.hbs
+++ b/views/mi-canton/inicio.hbs
@@ -1,10 +1,159 @@
-<h1>INICIO</h1>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-link navbar-light ">
+  <!-- Container wrapper -->
+  <div class="container-fluid">
 
+    <!-- Navbar brand -->
+    <img src="../images/logo.svg" >
+    <a class="navbar-brand" href="/" Style="font-family: Pathway Gothic One; font-size:x-large">TE VENDO MI CANTÓN</a>
+    <!-- Toggle button -->
+    <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fas fa-bars"></i>
+    </button>
 
-<a href="/ventas">
-  <button>Vender</button>
+    <!-- Collapsible wrapper -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+        <!-- Link -->
+        <li class="nav-item">
+          <a class="nav-link" href="/ventas">Vender Propiedad</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/compras">Comprar Propiedad</a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+  <!-- Container wrapper -->
+</nav>
+{{!-- Header --}}
+<center><img src="../images/header.png" class="img-fluid" alt="Te vendo mi cantón" style="padding:none"></center>
+<br/>
+<div class="container">
+{{!-- Cards de compra-venta --}}
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card card-center">
+      <div class="card-body">
+        <h5 class="card-title text-center">¿Tienes una propiedad que deseas vender?</h5>
+        <p class="card-text text-center">¿Quieres vender la casa que compraste con Infonavit que no ocupas  o está invadida o desvalijada y ya no quieres que te sigan descontando?</p>
+        <a href="/ventas" class="btn btn-primary btn-lg" style="display: flex; justify-content: center; 	align-items: center; 	align-content: center">Vender</a>
+      </div>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card card-center">
+      <div class="card-body text-center">
+        <h5 class="card-title text-center">¿Buscas aprovechar al máximo tu dinero al comprar una propiedad?</h5>
+        <p class="card-text text-center">Revisa entre el catálogo de opciones para encontrar tu casa ideal</p>
+        <a href="/compras" class="btn btn-primary btn-lg" style="display: flex; justify-content: center; 	align-items: center; 	align-content: center">Comprar</a>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="d-grid gap-2" style="padding-top: 5%"></div>
+<a aria-label="Recibe asesoría personalizada" href="https://wa.me/525525450911?text=Estoy%20interesado%20en%20comprar%20o%20vender%20mi%20casa" style="display: flex; justify-content: center; 	align-items: center; 	align-content: center; widht: 100%"> <img alt="Habla con un agente en WhatsApp" src="../images/WhatsAppButtonGreenLarge.svg" /></a>
+  </div>
+</div>
+<br>
+<br>
+{{!-- Testimonials --}}
+<center><h1 Style="font-family: Pathway Gothic One; font-size:xx-large">Experiencias con TE VENDO MI CANTÓN</h1></center>
+<br/>
+<div class="row row-cols-1 row-cols-md-3 g-4 ms-3 me-3 "  >
+  <div class="col">
+    <div class="card h-100">
+      <img src="https://pregonerobaja.com.mx/wp-content/uploads/2021/02/IMG_6934.jpg" class="card-img-top" alt="Skyscrapers"/>
+      <div class="card-body">
+        <h5 class="card-title">"Vendí mi propiedad y me liberé de deudas y problemas"</h5>
+        <p class="card-text">
+          Tenía 5 años pagando una casa que ya no podía mantener, estaba abandonada y vandalizada. El crédito me estaba dejando sin dinero. En TE VENDO MI CANTÓN, me ayudaron a deshacerme de la deuda y volver a cotizar en INFONAVIT.
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Juan y Patricia, Ciudad de México</small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="https://i.pinimg.com/550x/a8/f3/db/a8f3db5df7900d600a381d3568c81676.jpg" class="card-img-top" alt="Los Angeles Skyscrapers"/>
+      <div class="card-body">
+        <h5 class="card-title">"Encontré la casa de mis sueños"</h5>
+        <p class="card-text">Encontré la opción ideal para mi y para mi familia, a un precio accesible y con la asesoría durante todo el proceso de compra</p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Samuel, Estado de México</small>
+      </div>
+    </div>
+  </div>
+  <div class="col">
+    <div class="card h-100">
+      <img src="https://rio19.mx/wp-content/uploads/2021/11/casa-infonavit.jpg" class="card-img-top" alt="Palm Springs Road"/>
+      <div class="card-body">
+        <h5 class="card-title">"Liberé mi deuda, vendí mi casa"</h5>
+        <p class="card-text">
+          Me asesoraron y acompañaron durante todo el proceso para vender mi casa. Me liberé de la deuda INFONAVIT que tenía al seguir pagando una casa que no ocupabamos.
+        </p>
+      </div>
+      <div class="card-footer">
+        <small class="text-muted">Carolina, Ciudad de México</small>
+      </div>
+    </div>
+  </div>
+</div>
+
+{{!-- Whatsapp Button --}}
+<a>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://wa.me/525525450911" class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i>
 </a>
+{{!-- Footer --}}
 
-<a href="/compras">
-  <button>Comprar</button>
-</a>
+  <footer class="bg-light text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4 pb-0">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a
+        class="btn btn-primary btn-floating m-1"
+        style="background-color: #3b5998;"
+        href="https://www.facebook.com/tevendomicanton"
+        role="button"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+      <!-- Google -->
+      <a
+        class="btn btn-primary btn-floating m-1"
+        style="background-color: #dd4b39;"
+        href="#!"
+        role="button"
+        ><i class="fab fa-google"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a
+        class="btn btn-primary btn-floating m-1"
+        style="background-color: #ac2bac;"
+        href="https://www.instagram.com/tevendomicanton/"
+        role="button"
+        ><i class="fab fa-instagram"></i
+      ></a>
+
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2022 Copyright:
+    <a class="text-white" href="https://mdbootstrap.com/">Te vendo mi cantón</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+  
