--- a/views/mi-canton/ventas.hbs
+++ b/views/mi-canton/ventas.hbs
@@ -4,36 +4,82 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Te vendo mi cantón</title>
+  <!-- Navbar -->
+<nav class="navbar navbar-expand-lg bg-link navbar-light ">
+  <!-- Container wrapper -->
+  <div class="container-fluid">
+
+    <!-- Navbar brand -->
+    <img src="../images/logo.svg" >
+    <a class="navbar-brand" href="/" Style="font-family: Pathway Gothic One; font-size:x-large">TE VENDO MI CANTÓN</a>
+    <!-- Toggle button -->
+    <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <i class="fas fa-bars"></i>
+    </button>
+
+    <!-- Collapsible wrapper -->
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+        <!-- Link -->
+        <li class="nav-item">
+          <a class="nav-link" href="/ventas">Vender Propiedad</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/compras">Comprar Propiedad</a>
+        </li>
+      </ul>
+
+    </div>
+  </div>
+  <!-- Container wrapper -->
+</nav>
+{{!-- Header --}}
+  <center><img src="../images/headerVentas.png" class="img-fluid" alt="Te vendo mi cantón" style="padding:none"></center>
+  <div class="inicio">
+    <a href="/">
+      <button class="btn btn-dark">Inicio</button>
+    </a>
+  </div>
 </head>
   <body>
-    <a href="/">
-      <button>Inicio</button>
-    </a>
 
-    <h1>VENDE TU PROPIEDAD</h1>
-      <br>
-        <h2>INFORMACIÓN DEL VENDEDOR</h2>
-
+<div class="container">
+  <div class="container text-center">
+  <div class="row">
+    <div class="col-8">
+ </div>
     <form onsubmit="sendData" action="/ventas" method="post" id="#myForm">
-      <div>   
-        <label> Nombre
-          <input name="nombreUsuario">
-        </label>
+      <div class="mb-3">
+        <label name="nombreUsuario" class="form-label">Nombre completo</label>
+        <input type="name" class="form-control" id="nombreUsuario" aria-describedby="nombreUsuario">
+        <div id="nombreUsuario" class="form-text">Ingresa tu nombre para ponernos en contacto contigo</div>
       </div>
-
-      <div>
-        <label> Email
-          <input name="email">
-        </label>
+      <div class="mb-3">
+        <label name="email" class="form-label">Correo electrónico</label>
+        <input type="email" class="form-control" id="email">
       </div>
-      
-      <div>
-        <button type="submit">
-          Enviar Datos
-        </button>
+      <div class="mb-3">
+        <label name="telefono" class="form-label">Teléfono</label>
+        <input type="number" class="form-control" id="telefono">
       </div>
+      <button type="submit" class="btn btn-primary">Recibir información</button>
     </form>
+ </div>
+    <div class="col-4">
+
+    </div>
+  </div> 
+
+</div>
+{{!-- Whatsapp Button --}}
+<a>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<a href="https://wa.me/525525450911" class="float" target="_blank">
+<i class="fa fa-whatsapp my-float"></i>
+</a>
+      
 
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
@@ -43,3 +89,49 @@
   </body>
 </html>
 
+{{!-- Footer --}}
+
+  <footer class="bg-light text-center text-white">
+  <!-- Grid container -->
+  <div class="container p-4 pb-0">
+    <!-- Section: Social media -->
+    <section class="mb-4">
+      <!-- Facebook -->
+      <a
+        class="btn btn-primary btn-floating m-1"
+        style="background-color: #3b5998;"
+        href="https://www.facebook.com/tevendomicanton"
+        role="button"
+        ><i class="fab fa-facebook-f"></i
+      ></a>
+      <!-- Google -->
+      <a
+        class="btn btn-primary btn-floating m-1"
+        style="background-color: #dd4b39;"
+        href="#!"
+        role="button"
+        ><i class="fab fa-google"></i
+      ></a>
+
+      <!-- Instagram -->
+      <a
+        class="btn btn-primary btn-floating m-1"
+        style="background-color: #ac2bac;"
+        href="https://www.instagram.com/tevendomicanton/"
+        role="button"
+        ><i class="fab fa-instagram"></i
+      ></a>
+
+    </section>
+    <!-- Section: Social media -->
+  </div>
+  <!-- Grid container -->
+
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2022 Copyright:
+    <a class="text-white" href="https://mdbootstrap.com/">Te vendo mi cantón</a>
+  </div>
+  <!-- Copyright -->
+</footer>
+  
